--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,17 +2,33 @@ name: wallpaper_manager
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 0.1.0
 
 environment:
   sdk: '>=2.19.3 <3.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.2
+  desktop_drop: ^0.4.1
+  extended_image: ^7.0.2
   ffi: ^2.0.1
+  flutter_smart_dialog: ^4.9.0+3
   flutter_rust_bridge: ^1.62.1
   flutter:
     sdk: flutter
+  hovering: ^1.0.4
+  loading_indicator: ^3.1.0
+  provider: ^6.0.3
+  window_size:
+    git:
+      url: https://gitee.com/guchengxi1994/flutter-desktop-embedding.git
+      path: plugins/window_size
+      ref: 6c66ad23ee79749f30a8eece542cf54eaf157ed8
+
+deferred-components:
+  - name: wallpaper
+    libraries:
+      - package:wallpaper_manager/screens/wallpaper/management_screen.dart
 
 dev_dependencies:
   ffigen: ^6.0.1
@@ -30,6 +46,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - asset/image/no.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
