feat: window_manager

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,7 @@ dependencies:
   hovering: ^1.0.4
   loading_indicator: ^3.1.0
   provider: ^6.0.3
-  window_size:
-    git:
-      url: https://gitee.com/guchengxi1994/flutter-desktop-embedding.git
-      path: plugins/window_size
-      ref: 6c66ad23ee79749f30a8eece542cf54eaf157ed8
+  window_manager: ^0.3.1
 
 deferred-components:
   - name: wallpaper
