--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   hovering: ^1.0.4
   loading_indicator: ^3.1.0
   provider: ^6.0.3
+  tray_manager: ^0.2.0
   window_manager: ^0.3.1
 
 deferred-components:
@@ -47,5 +48,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/image/no.png
+    - asset/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
