--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: wallpaper_manager
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.1.2
+version: 0.1.3
 
 environment:
   sdk: '>=2.19.3 <3.0.0'
@@ -19,6 +19,7 @@ dependencies:
   flutter_rust_bridge: ^1.62.1
   flutter:
     sdk: flutter
+  gif: ^2.2.0
   hovering: ^1.0.4
   loading_indicator: ^3.1.0
   provider: ^6.0.3
