--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "native"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
 
 [lib]
@@ -17,9 +17,11 @@ sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite","ch
 rust-crypto = "0.2.36"
 tokio = { version = "1.25.0", features = ["full"] }
 wallpaper = { version = "3", features = ["from_url"] }
+rs_filemanager = {path = "D:/github_repo/rs_filemanager"} # for dev
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
+winrt-notification = "0.5.1"
 
 [build-dependencies]
 flutter_rust_bridge_codegen = "= 1.62.1"
