--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     git: 
       url: https://github.com/guchengxi1994/file_type
   flutter_smart_dialog: ^4.9.0+3
-  flutter_rust_bridge: ^1.62.1
+  flutter_rust_bridge: 1.62.1
   flutter:
     sdk: flutter
   gif: ^2.2.0
@@ -32,11 +32,14 @@ deferred-components:
       - package:wallpaper_manager/screens/wallpaper/management_screen.dart
 
 dev_dependencies:
+  build_runner: ^2.3.3
   ffigen: ^6.0.1
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
