--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/image/no.png
+    - asset/image/gallery.png
     - asset/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
