--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "native"
-version = "0.1.3"
+version = "0.1.5"
 edition = "2021"
 
 [lib]
@@ -17,6 +17,7 @@ sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite","ch
 rust-crypto = "0.2.36"
 tokio = { version = "1.25.0", features = ["full"] }
 wallpaper = { version = "3", features = ["from_url"] }
+reqwest = { version = "0.11", features = ["json"] }
 rs_filemanager = {path = "D:/github_repo/rs_filemanager"} # for dev
 
 [target.'cfg(windows)'.dependencies]
